# Hermes_skill_scoring_tool

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  README_zh.md  inspect_map.py  mapper.py  pyproject.toml
examples/: reaction_audit_bot.py
hermes_discord_skill_audit/: __init__.py  audit_db.py  config.py  discord_reactions.py  message_format.py  reaction_audit.py  scores.py  state.py  system_info.py  turn_map.py
tests/: test_inspect_map.py  test_mapper.py  test_package_boundaries.py  test_reaction_audit_bot.py  test_reaction_audit_core.py
video/: example_use_case.mkv
